started refactor into single pipeline

--- a/RP.ipynb
+++ b/RP.ipynb
@@ -1,46 +1,92 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
-   "outputs": [],
    "source": [
-    "cd 'c:/users/chdan/cd/Ph1VALID-EMG/functions'"
+    "# (Pre)processing Pipeline Ph1VALID (EMG)\n",
+    "\n",
+    "## Data Management\n",
+    "- data collected during the experiment is stored in folders named for the subject id\n",
+    "- EMG data and the logfiles of Neurobs Presesntation were stored seperately\n",
+    "\n",
+    "```\n",
+    "ph1valid_data\\\n",
+    "│   \n",
+    "├───EMG_raw\\\n",
+    "│   │\n",
+    "│   ├───VP01\\\n",
+    "│   │   │  VP01_20160518.bdf\n",
+    "│   │\n",
+    "│   ├───VP02\\\n",
+    "│   │   │  VP14_20160519.bdf\n",
+    "│   │ ...\n",
+    "│\n",
+    "├───Presentation_logfiles\\\n",
+    "│   │\n",
+    "│   ├───VP01\\\n",
+    "│   │   │  VP01_RP.tsv\n",
+    "│   │   │  VP01_TS_l.tsv\n",
+    "│   │   │  VP01_M_subjinfo.tsv\n",
+    "│   │   │  VP01_ValidExp.log\n",
+    "│   │ \n",
+    "│   ├───VP02\\\n",
+    "│      ...\n",
+    "│\n",
+    "└───Unipark_Export\\\n",
+    "        data_project_575802_2016_06_10.csv\n",
+    "```\n",
+    "\n",
+    "- Intermediate results are stored after each step of the processing pipeline:\n",
+    "\n",
+    "```\n",
+    "ph1valid_out\\\n",
+    "│   \n",
+    "├───EMG_preprocessed\\\n",
+    "│   │\n",
+    "│   ├───VP01\\\n",
+    "│   │   │  VP01_20160518.bdf\n",
+    "│   │\n",
+    "│   ├───VP02\\\n",
+    "│   │   │  VP14_20160519.bdf\n",
+    "│   │ ...\n",
+    "│\n",
+    "├───subjmfiles\\\n",
+    "│   │\n",
+    "│   ├───VP01\\\n",
+    "│   │   │  VP01_RP.tsv\n",
+    "│   │   │  VP01_TS_l.tsv\n",
+    "│   │   │  VP01_M_subjinfo.tsv\n",
+    "│   │   │  VP01_ValidExp.log\n",
+    "│   │ \n",
+    "│   ├───VP02\\\n",
+    "│      ...\n",
+    "│\n",
+    "└───Grand_Averages\\\n",
+    "        tlga_rp.mat\n",
+    "        tlga_ts.mat\n",
+    "```\n",
+    "\n",
+    "- The 'subjmfile' of each subject contains all Information that has been gathered or calculated:\n",
+    "    - Block Order and letter-response matching\n",
+    "    - date of experimental procedure\n",
+    "    - all demographic and other information given by the subject during the experimental run\n",
+    "    - output of preprocessing (data quality, nr of trials, amplitudes, errors etc.)\n",
+    "    - output of classification (Omissions, False Positives, Response Times etc.)\n",
+    "    - results of the NEO-FFI survey\n",
+    "- can be loaded (as structure 'subjinfo') into the Matlab workspace with 'eval(<filename>)'"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ft_default = \n",
-      "\n",
-      "         showcallinfo: 'no'\n",
-      "          trackconfig: 'off'\n",
-      "          checkconfig: 'loose'\n",
-      "            checksize: 100000\n",
-      "                debug: 'no'\n",
-      "    outputfilepresent: 'overwrite'\n",
-      "        trackcallinfo: 'no'\n",
-      "        trackdatainfo: 'no'\n",
-      "             progress: [1x1 struct]\n",
-      "              warning: [1x1 struct]\n"
-     ]
-    }
-   ],
    "source": [
-    "global ft_default;\n",
-    "ft_default"
+    "## Preprocessing"
    ]
   },
   {
@@ -413,31 +459,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Traceback (most recent call last):\n",
-      "  File \"C:\\Users\\chdan\\Anaconda2\\lib\\site-packages\\metakernel\\magics\\python_magic.py\", line 19, in exec_code\n",
-      "    exec(code, env)\n",
-      "  File \"<string>\", line 4, in <module>\n",
-      "NameError: name 'self' is not defined\n",
-      "\n"
+      "a =\n",
+      "\n",
+      "     6\n"
      ]
     }
    ],
    "source": [
-    "%%python\n",
-    "\n",
-    "from metakernel import Magic\n",
-    "import json\n",
-    "\n",
-    "connection_file = self.kernel.config[\"IPKernelApp\"][\"connection_file\"]"
+    "a = 6"
    ]
   }
  ],
