changes pc left

--- a/RP.ipynb
+++ b/RP.ipynb
@@ -17,8 +17,8 @@
     "| directory     | location           | purpose        |\n",
     "| ------------- |:------------------:| ----------------:|\n",
     "| **ph1valid_data** | %USERPROFILE% / ~  | raw data storage |\n",
-    "| **ph1valid_out**  | %USERPROFILE% / ~  | results, figures |\n",
-    "| **ph1VALID-EMG**  |                    | analysis pipeline |\n",
+    "| **ph1valid_out**  | %USERPROFILE% / ~  | cleaned data, results, figures |\n",
+    "| **ph1VALID-EMG**  |                    | preprocessing and analysis pipeline |\n",
     "\n",
     "\n",
     "\n",
@@ -143,23 +143,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "%edit 'functions/ph1valid01_prepro.m'</div><i class=\"fa fa-lightbulb-o \"></i>"
+    "mfile_table"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -186,7 +177,7 @@
    ],
    "mimetype": "text/x-octave",
    "name": "matlab",
-   "version": "0.10.1"
+   "version": "0.10.3"
   },
   "nav_menu": {
    "height": "103px",
