--- a/references/0_basedir_ORIG/RP.ipynb
+++ b/references/0_basedir_ORIG/RP.ipynb
@@ -129,16 +129,24 @@
    },
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "File D:\\Program Files\\MATLAB\\R2016a\\toolbox\\matlab\\datatypes\\cell2mat.p, line 27, in cell2mat\n",
-      "No input argument specified. There should be exactly one input argument.\n"
+      "data = \n",
+      "\n",
+      "           hdr: [1x1 struct]\n",
+      "         label: {2x1 cell}\n",
+      "          time: {1x200 cell}\n",
+      "         trial: {1x200 cell}\n",
+      "       fsample: 29.9909\n",
+      "    sampleinfo: [200x2 double]\n",
+      "     trialinfo: [200x1 double]\n",
+      "           cfg: [1x1 struct]\n"
      ]
     }
    ],
    "source": [
-    "cell2mat()"
+    "data"
    ]
   },
   {
